2008-02-06  Dmitry Dulepov  <dmitry@typo3.org>

	* Fixed error #6849: Error on 404/Page Not Found
	* Updated function index with extdeveval

2008-01-18  Dmitry Dulepov  <dmitry@typo3.org>

 * Added eol-style property for all text files
 * Fixed another incarnation of postVarSet issue

2008-01-07  Dmitry Dulepov  <dmitry@typo3.org>

 * Updated logo in manual

2007-11-28  Dmitry Dulepov  <dmitry@typo3.org>

 * Update information about config.baseURL in the documentation

2007-10-22  Dmitry Dulepov  <dmitry@typo3.org>

 * Removed svn:eol-style=native from all files because it caused problems with EM on *nix systems

2007-10-21  Dmitry Dulepov  <dmitry@typo3.org>

 * Updated documentation
 * Some files are reformatted according to conding conventions
 * Updated function index

2007-10-07  Dmitry Dulepov  <dmitry@typo3.org>

 * Fix: query string was reconstructed only when cache was not in use

2007-10-07  Dmitry Dulepov  <dmitry@typo3.org>

 * Added hooks for extensions to provide configuration
 * Autoconfiguration is moved to processing class
 * Removed lateAddToCache because it had bad side effects

2007-10-01  Dmitry Dulepov  <dmitry@typo3.org>

 * Fixed wrong intval on string md5

2007-09-20  Dmitry Dulepov  <dmitry@typo3.org>

 * Changed tx_realurl_urlencodecache and tx_realurl_urldecodecache to use full md5
 * Added lots of calls to TYPO3_DB->sql_free_result to free PHP resources
 * Default autoconfiguration file location is now in typo3conf
 * Fixed bug 4995: 301 redirection for expired pagepaths broken

2007-09-18  Dmitry Dulepov  <dmitry@typo3.org>

 * Removed "DEFAULT '0'" from "uid" column in tx_realurl_uniqalias
 * Fixed bug 5369: Converting to InnoDB
 * Changed primary key for tx_realurl_errorlog to prevent errors about duplicate entries
 * Optimized query to tx_realurl_errorlog
 * 'suggest' static_info_tables instead of requiring it

2007-09-14  Dmitry Dulepov  <dmitry@typo3.org>
