@@ -1,3 +1,8 @@
+2008-03-05  Dmitry Dulepov  <dmitry@typo3.org>
+
+	* Fixed bug #6952: expireDays is not set correctly
+	* Fixed bug #6416: if autoUpdatePathCache is true old urls are redirected not as 301
+
 2008-02-06  Dmitry Dulepov  <dmitry@typo3.org>
 
 	* Fixed error #6849: Error on 404/Page Not Found
